--- a/TestAutoComplete/src/application/application.css
+++ b/TestAutoComplete/src/application/application.css
@@ -1,1 +1,21 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.button-like {
+  -fx-background-color: 
+       -fx-shadow-highlight-color, 
+       -fx-outer-border, 
+       -fx-inner-border, 
+       -fx-body-color;
+  -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+  -fx-background-radius: 3px, 3px, 2px, 1px;
+}
+.testing {
+	-fx-border-color: black; 
+	-fx-border-insets: 5;
+	-fx-border-width: 2;
+	-fx-border-style: solid;
+}
+
+.thick-divider {
+	-fx-border-color: black; 
+	-fx-border-width: 8px;
+}
